--- a/tweet/tweetunder/templates/index.html
+++ b/tweet/tweetunder/templates/index.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color:#000;
-            color:white;
-        }
-    </style>
-</head>
-<body>
-    <h1>This is Home page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}tweet page{% endblock %}
+
+{% block content %}
+<h1 class="text-white text-center mt-5">this is content page</h1>
+
+{% endblock %}
