tweet app ready

--- a/tweet/tweetunder/templates/tweet_list.html
+++ b/tweet/tweetunder/templates/tweet_list.html
@@ -27,11 +27,15 @@
                     </p>
 
                     <div class="mt-auto d-flex justify-content-center gap-5">
+                        
+                        {% if tweet.user == user %}         
                         <a href="{% url 'tweet_edit' tweet.id %}" class="btn btn-warning">Edit</a>
                         <a href="{% url 'tweet_delete' tweet.id %}" class="btn btn-danger"
                            onclick="return confirm('Are you sure you want to delete this tweet?');">
                             Delete
                         </a>
+                                   
+                        {% endif %} 
                     </div>
                 </div>
             </div>
@@ -40,3 +44,5 @@
     </div>
 </div>
 {% endblock %}
+
+                  
