--- a/tweet/templates/layout.html
+++ b/tweet/templates/layout.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
 </head>
-<body class="bg-dark">
+<body class="bg-dark text-white">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -46,6 +46,18 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <a href="{% url 'tweet_list'%}" class="btn btn-primary mx-2">Tweet Home</a>
+            
+            {% if user.is_authenticated %}
+            <form action="{% url 'logout'%}" method="post">
+              {% csrf_token %}
+              <button class="btn btn-danger">Logout</button>
+            </form>
+            {%else %}
+            <a href="{% url 'register'%}" class="btn btn-primary mx-2">Register</a>
+            <a href="{% url 'login'%}" class="btn btn-success mx-2">login</a>
+            {% endif %}
+              
           </div>
         </div>
       </nav>
